# hermax

./: .gitignore  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.py  smoke_test.py
.github/workflows/: auto-tag.yml  cibuildwheel.yml
CASHWMaxSAT/: starexec_build
CASHWMaxSAT/cadical/: configure  makefile.in
CASHWMaxSAT/cominisatps/: Makefile
CASHWMaxSAT/scipoptsuite-8.1.0/: CMakeLists.txt
CASHWMaxSAT/uwrmaxsat/: Main_utils.cc  Makefile  MsSolver.cc  MsSolver.h  ScipSolver.cc  config.cominisatps  config.glucose3  config.glucose4  config.maple  config.mergesat  config.minisat  config.mk  config.msys2ucrt64  ipamir.cc  ipamir.h
EvalMaxSAT2022/: build_lib.sh
Loandra/: description.txt
Loandra/code/: Makefile  ParserPB.cc  (+1 more)
NuWLS-c-IBR/: starexec_description.txt
SPB-MaxSAT-c-FPS/: starexec_description.txt
cardenc/: pycard.cc  setup.py
cashwmaxsat-py/: CMakeLists.txt
cashwmaxsat-py/python/: cashwmaxsat_bindings.cpp
docs/: .gitignore  Makefile  acknowledgments.rst  api.rst  bindings.rst  compilation.rst  conf.py  developer.rst  examples.rst  incomplete_subprocess.rst  incremental.rst  index.rst  interface.rst  model_examples.rst  model_examples_tricks.rst  modeling.rst  modeling_api.rst  modeling_boolean_pb.rst  modeling_collections.rst  modeling_export_solve.rst  modeling_internal_overview.rst  modeling_modifiers.rst  modeling_overview.rst  modeling_structuredpb.rst  modeling_tricks.rst  modeling_typed.rst  non_incremental.rst  non_incremental_incomplete.rst  np_problems.rst  portfolio.rst  quickstart.rst  quickstart_basic_usage.rst  quickstart_installation.rst  quickstart_output.rst  rc2.rst  requirements.txt  testing.rst  utils.rst  utils_api.rst
eval-py/EvalMaxSAT-nogit/: .gitignore  CMakeLists.txt  description.md  pseudoBoolean-normalized-par8-2.opb.msat.old.wcnf
eval-py/EvalMaxSAT-nogit/lib/EvalMaxSAT/: CMakeLists.txt
eval-py/EvalMaxSAT-nogit/lib/EvalMaxSAT/src/: EvalMaxSAT.h  mcqd.h
eval-py/EvalMaxSAT-nogit/lib/cadical/: CMakeLists.txt
eval-py/EvalMaxSAT-nogit/lib/cadical/src/: clause.cpp  file.hpp
eval-py/EvalMaxSAT-nogit/lib/glucose/: CMakeLists.txt
eval-py/EvalMaxSAT-nogit/lib/glucose/src/glucose/core/: Solver.cc
eval-py/EvalMaxSAT-nogit/lib/glucose/src/glucose/parallel/: SolverConfiguration.cc
eval-py/EvalMaxSAT-nogit/lib/glucose/src/glucose/utils/: System.h
eval-py/EvalMaxSAT-nogit/python/: CMakeLists.txt  evalmaxsat_bindings.cpp
evalmaxsat/: .gitignore  CMakeLists.txt
evalmaxsat-incr-py/: CMakeLists.txt
evalmaxsat-incr-py/python/: evalmaxsat_incr_bindings.cpp
evalmaxsat-latest-py/: CMakeLists.txt
evalmaxsat-latest-py/python/: evalmaxsat_latest_bindings.cpp
examples/: cvrp.py  cvrp_flat.py  evalmaxsat_incr_relaxation.py  incremental_assumptions.py  load_wcnf_formula.py  non_incremental_rc2_reentrant.py  optilog_formula_compat.py  paper.py  portfolio_mixed.py  portfolio_presets.py  quickstart_model.py  quickstart_uwrmaxsat.py  run_all_examples.py  wifi.py  wifi_lib.py  wifi_minimal.py  wifi_model.py
hermax/: __init__.py  model.py  utils.py
loandra-py/: CMakeLists.txt
loandra-py/cmake/: ns_compat.h
loandra-py/python/: loandra_bindings.cpp
nuwls-c-ibr-py/: CMakeLists.txt
nuwls-c-ibr-py/python/: nuwls_c_ibr_bindings.cpp
open-wbo/: .gitignore  CMakeLists.txt  Main.cc  MaxSAT.cc  MaxSAT.h  ParserPB.cc  depend.mk  openwbo_bindings.cpp  test.wcnf
open-wbo-inc/: .gitignore  CMakeLists.txt  Main.cc  MaxSAT.cc  MaxSAT.h  ParserPB.cc  ParserPB.h  README.md  openwbo_bindings.cpp
open-wbo-inc/algorithms/: Alg_OBV.cc  Alg_OLL.cc
open-wbo-inc/solvers/MapleCOMSPS_LRB/core/: Main.cc
open-wbo-inc/solvers/glucose4.1/core/: Solver.cc
open-wbo-inc/solvers/glucose4.1/parallel/: Main.cc
open-wbo-inc/solvers/glucose4.1/utils/: System.h
open-wbo-inc/solvers/minisat2.2/core/: Main.cc
open-wbo-inc/solvers/minisat2.2/utils/: System.h
open-wbo/cmake/: ns_compat.h
open-wbo/solvers/glucose4.0/parallel/: Main.cc
open-wbo/solvers/glucose4.0/utils/: System.h
open-wbo/solvers/glucose4.1/core/: Solver.cc
open-wbo/solvers/glucose4.1/utils/: System.h
open-wbo/solvers/minisat2.2/simp/: Main.cc
open-wbo/solvers/minisat2.2/utils/: System.h
spb-maxsat-c-fps-py/: CMakeLists.txt
spb-maxsat-c-fps-py/python/: spb_maxsat_c_fps_bindings.cpp
tests/: .gitignore  README.md  benchmark_itotalizer.py  cibw_test_entrypoint.py  compliance_expectations.example.json  conftest.py  debug_uwrmaxsatcomp_crash.py  find_wifi_scratch_config.py  run_collected_tests.py  run_compliance_matrix.py  structuredpb_test_utils.py  test_cashwmaxsat.py  test_evalmaxsat_incr.py  test_evalmaxsat_latest.py  test_evalmaxsat_latest_reentrant.py  test_formula_utils.py  test_itotalizer_parity.py  test_pblib_lpw_manual.py  test_structuredpb_auto.py  test_structuredpb_ggpw.py  test_structuredpb_gmto.py  test_structuredpb_gswc.py  test_structuredpb_mdd.py  test_structuredpb_overlap_policy.py  test_structuredpb_paper_examples.py  test_structuredpb_rggt.py  test_structuredpb_selector.py
urmaxsat-comp-py/: CMakeLists.txt  config.cadical  config.cominisatps  config.glucose4  config.mergesat  config.mk  ipamir.cc
urmaxsat-comp-py/cominisatps/core/: Solver.cc  Solver.h
urmaxsat-comp-py/cominisatps/minisat/core/: Main.cc
urmaxsat-comp-py/cominisatps/minisat/mtl/: template.mk
urmaxsat-comp-py/cominisatps/minisat/simp/: Main.cc  SimpSolver.cc
urmaxsat-comp-py/cominisatps/simp/: depend.mk
urmaxsat-comp-py/glucose4.1/core/: Solver.h  SolverTypes.h
urmaxsat-comp-py/glucose4.1/minisat/: mtl  simp
urmaxsat-comp-py/glucose4.1/mtl/: config.mk  template.mk
urmaxsat-comp-py/glucose4.1/simp/: SimpSolver.cc
urmaxsat-comp-py/python/: urmaxsat_comp_bindings.cpp
urmaxsat-py/: .gitignore  CMakeLists.txt  test_evalmaxsat_problem.wcnf
urmaxsat-py/uwrmaxsat/: CMakeLists.txt  cominisatps.patch  config.cominisatps  config.glucose3  config.glucose4  config.maple  config.mergesat  config.minisat  config.mk  config.msys2ucrt64
wmaxcdcl-py/: CMakeLists.txt
wmaxcdcl-py/python/: wmaxcdcl_bindings.cpp
(+385 files in other folders)
